--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "IMG-20220201-WA0002.jpg",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "IMG-20220201-WA0002.jpg",
       "type": "image/png",
       "sizes": "512x512"
     }
